# agentic-workflow-orchestrator

./: .gitignore  CHANGELOG_v0.1.0.md  DESIGN.md  LICENSE  LLM_INTEGRATION.md  LLM_NOT_FOR_ORCHESTRATION.md  LLM_PROVIDERS_SUMMARY.md  MCP_INTEGRATION.md  PACKAGE_SUMMARY.md  PUBLISH_TO_PYPI.md  PYTHON_SDK_ARCHITECTURE.md  QUICKSTART.md  README.md  READY_FOR_PYPI.md  SDK_AND_ENGINE.md  TESTING.md
engine/: Makefile  README.md  go.mod
engine/cmd/orchestrator/: main.go
engine/internal/ratelimit/: bucket.go  bucket_test.go
engine/internal/report/: report.go  report_test.go
engine/internal/scheduler/: scheduler.go  scheduler_test.go
engine/internal/spec/: spec.go  spec_test.go  template.go
engine/transport/grpc/: server.go
engine/transport/stdio/: stdio.go
proto/: orchestrator.proto
sdk-python/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
sdk-python/examples/: 01_hello_world.py  02_parallel_pipeline.py  03_llm_content_review.py  04_mcp_flexible_workflow.py  05_multi_provider_llm.py  run_market.py
sdk-python/orchestrator/: __init__.py  engine.py  llm.py  mcp_integration.py  ratelimit.py  registry.py  report.py  spec.py
sdk-python/tests/: test_engine.py  test_go_engine.py  test_mcp_integration.py
spec/: spec.schema.json
spec/examples/: market-analysis.json  market-analysis.yaml
